# aws-incident-agent

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json  settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  deploy.yml
docs/: PLAN.md
infra/terraform/: backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/terraform/modules/agentcore/: ecr.tf  iam.tf  outputs.tf  runtime.tf  ssm.tf  variables.tf
infra/terraform/modules/demo_api/: alarms.tf  api_gateway.tf  iam.tf  lambda.tf  outputs.tf  variables.tf
infra/terraform/modules/eventbridge/: iam.tf  outputs.tf  rule.tf  variables.tf
prompts/: investigator_system.md  remediation_system.md
scripts/: manage_runtimes.py
services/agents/investigator/: Dockerfile  agent.py  app.py  requirements.txt
services/agents/remediation/: Dockerfile  agent.py  app.py  requirements.txt
services/demo_api/: handler.py
services/shared/: __init__.py  config.py  models.py
services/tools/aws_observability/: __init__.py  cloudwatch_logs.py  cloudwatch_metrics.py  deployment_history.py
services/tools/github/: __init__.py  _client.py  branch.py  commit.py  pull_request.py  repo_read.py
tests/: conftest.py
tests/unit/: test_demo_api.py
tests/unit/agents/: test_investigator_adapter.py  test_remediation_adapter.py
tests/unit/shared/: test_models.py
tests/unit/tools/: test_cloudwatch_logs.py  test_cloudwatch_metrics.py  test_deployment_history.py  test_github.py
workflows/: incident_workflow.asl.json
(+13 files in other folders)
