[project]
name = "aws-incident-agent"
version = "0.1.0"
requires-python = ">=3.13"

[project.optional-dependencies]
dev = ["ruff", "pytest", "pytest-cov"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
