[project]
name = "aws-incident-agent"
version = "0.1.0"
requires-python = ">=3.13"

[project.urls]
Repository = "https://github.com/JakeScoltock/aws-incident-agent"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "boto3>=1.34",
    "httpx>=0.27",
    "strands-agents>=0.1",
    "bedrock-agentcore>=0.1",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
    "moto[cloudwatch,logs,dynamodb]>=5.0",
    "pytest-httpx>=0.30",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["services*"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
